tests/expectations/compiler/finalize/get_or_incorrect_type_fail.out
Error [ETYC0372117]: Expected type `test.aleo/Token` but type `u128` was found.
    --> compiler-test:18:39
     |
  18 |     Mapping::get_or_use(tokens, addr, amount);
     |                                       ^^^^^^
Error [ETYC0372117]: Expected type `test.aleo/Token` but type `u128` was found.
    --> compiler-test:19:29
     |
  19 |     tokens.get_or_use(addr, amount);
     |                             ^^^^^^
Error [ETYC0372117]: Expected type `address` but type `u8` was found.
    --> compiler-test:20:34
     |
  20 |     Mapping::get_or_use(amounts, 1u8, amount);
     |                                  ^^^
Error [ETYC0372117]: Expected type `address` but type `u8` was found.
    --> compiler-test:21:24
     |
  21 |     amounts.get_or_use(1u8, amount);
     |                        ^^^
Error [ETYC0372117]: Expected type `u128` but type `u8` was found.
    --> compiler-test:22:40
     |
  22 |     Mapping::get_or_use(amounts, addr, 1u8);
     |                                        ^^^
Error [ETYC0372117]: Expected type `u128` but type `u8` was found.
    --> compiler-test:23:30
     |
  23 |     amounts.get_or_use(addr, 1u8);
     |                              ^^^
Error [ETYC0372117]: Expected type `u128` but type `u8` was found.
    --> compiler-test:24:73
     |
  24 |     Mapping::get_or_use(tokens, addr, Token { owner_addr: addr, amount: 1u8 });
     |                                                                         ^^^
Error [ETYC0372117]: Expected type `u128` but type `u8` was found.
    --> compiler-test:25:63
     |
  25 |     tokens.get_or_use(addr, Token { owner_addr: addr, amount: 1u8 });
     |                                                               ^^^
